# local-agent-workbench

./: .cursorignore  .gitignore  README.md  docker-compose.yml  ollama-proxy.conf  pyproject.toml
src/agent_workbench/: _parse_dotenv.py  config.py  main.py
