[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workbench"
description = "Setup to test different agents, models, prompts using claude before shipping them to n8n."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
]

[tool.setuptools.dynamic]
version = { file = "VERSION.in" }

[project.scripts]
agent-workbench = "agent_workbench.main:main"
